@@ -21,36 +21,89 @@
 
 import sys, urllib, string, time
 
-start_time = time.time()
+class ProgressiveDownload:
+    """
+    Download a file from an url, with a progressbar and some usefull
+    info: downloaded percentage, downloaded kbytes, filesize in
+    kbytes, download rate and elapsed time.
+    """
+    def __init__(self, url, filename=None, start=True, custom_report=None):
+        """
+        Keyword arguments:
+        url           -- the full url of the file to download
+        filename      -- the filename of the downloaded file, if it is not
+                         defined it is taken from the url (default None)
+        start         -- start download immediately (default True)
+        custom_report -- a function that manages the information supplied by
+                         ProgressiveDownload, it should accept five
+                         arguments: downloaded percentage (int), downloaded
+                         kbytes (int), filesize in  kbytes (int), download
+                         rate (str) and elapsed time. (default None: use
+                         internal progressbar)
+        """
+        self.url = url
+        if filename:
+            self.filename=filename
+        else:
+            self.filename=url[url.rindex("/")+1:]
+        if custom_report:
+            self.report=custom_report
+        else:
+            self.report=self._progressbar
+        if start:
+            self.start_download()
 
-def reporthook(numblocks, blocksize, filesize):
-    global start_time
-    try:
-        completed = min((numblocks*blocksize*100)/filesize, 100)
-    except:
-        completed = 100
-    if numblocks != 0:
-        rate = ((numblocks * blocksize)/(time.time()-start_time)/1024.0)
-        rate = str(rate)
-        rate = rate[:rate.index(".")+2]
+    def start_download(self):
+        """
+        Start download.
+        """
+        if self.report == self._progressbar:
+            print "Downloading %s" % self.url
+
+        self.start_time = time.time()
+
+        urllib.urlretrieve(self.url, self.filename, self._reporthook)
+
+        if self.report == self._progressbar:
+            sys.stdout.write("\n")
+
+    def _reporthook(self, numblocks, blocksize, filesize):
+        try:
+            downloaded_percentage = min((numblocks*blocksize*100)/filesize, 100)
+        except:
+            downloaded_percentage = 100
+        if numblocks != 0:
+            rate = ((numblocks * blocksize)/
+                    (time.time()-self.start_time)/1024.0)
+            downloaded_kbyte = int(numblocks * blocksize/1024.0)
+            filesize_kbyte = int(filesize/1024.0)
+            rate = str(rate)
+            rate = rate[:rate.index(".")+2]
+            elapsed_time = int(time.time()-self.start_time)
+            self.report(downloaded_percentage, downloaded_kbyte, filesize_kbyte,
+                        rate, elapsed_time)
+
+    def _progressbar(self, downloaded_percentage, downloaded_kbyte,
+                    filesize_kbyte, rate, elapsed_time):
         sys.stdout.write("\b"*79)
         bar = "[%s%s] %s%s%% %s%s kb/s   %s/%skb" % (
-            "#"*int(completed*(30.0/100)),     
-            " "*(30-int(completed*(30.0/100))),
-            " "*(3-len(str(completed))),
-            str(completed),
+            "#"*int(downloaded_percentage*(30.0/100)),     
+            " "*(30-int(downloaded_percentage*(30.0/100))),
+            " "*(3-len(str(downloaded_percentage))),
+            str(downloaded_percentage),
             " "*(6-len(rate)),
-            rate,
-            str(int(numblocks * blocksize/1024.0)),
-            str(int(filesize/1024.0)),
+            str(rate),
+            str(downloaded_kbyte),
+            str(filesize_kbyte)
             )
-        seconds = int(time.time()-start_time)
+            
+        seconds = elapsed_time
         minutes = int(seconds/60)
         hours = int(minutes/60)
 
         seconds = seconds - minutes * 60
         minutes = minutes - hours * 60
-        
+            
         hours = str(hours)
         minutes = str(minutes)
         seconds = str(seconds)
@@ -61,12 +114,7 @@ def reporthook(numblocks, blocksize, filesize):
         bar = "%s%s%s" % (bar, " "*(72-len(bar)), timer)
         sys.stdout.write(bar)
         sys.stdout.flush()
-
-def progdownload(url, filename):
-    print "Downloading %s" % url
-    urllib.urlretrieve(url, filename, reporthook)
-    sys.stdout.write('\n')
-
+            
 if __name__ == "__main__":
-    progdownload("http://commvulitlei.altervista.org/discografia/just_a_pulp_song.zip",
-             "just_a_pulp_song.zip")
+    ProgressiveDownload("http://commvulitlei.altervista.org/discografia/just_a_pulp_song.zip"),
+                        "just_a_pulp_song.zip")
