@@ -1,3 +1,5 @@
+	* 11/09:
+	- ProgressiveDownload is now a class
 	* 10/09:
 	- Enhaced download progressbar (ProgressiveDownload)
 	- Working install and update packages
